<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/sound_and_notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switchSound"
            android:title="@string/sound" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="switchVibration"
            android:title="@string/vibration" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="switchPush"
            android:title="@string/push_notification" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/game_data">
        <Preference
            android:key="switchReset"
            android:summary="@string/reset_all_data"
            android:title="@string/reset" />
    </PreferenceCategory>


</PreferenceScreen>