<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context="me.arifix.quizix.com.arifix.quizix.HomeActivity"
    tools:ignore="MissingPrefix">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/secHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppTitle"
            fontPath="fonts/OpenSans-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
            />

        <TextView
            android:id="@+id/tvAppSubtitle"
            fontPath="fonts/OpenSans-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/app_tagline"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
            android:configChanges="locale"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/secMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toTopOf="@id/adsBanner">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/secGame"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="#998c88ff"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@id/secAbout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/secScore"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivGame"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/game"
                android:scaleType="fitXY"
                android:src="@drawable/ic_videogame"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/game"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivGame" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/secScore"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:background="#998c88ff"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@id/secUser"
            app:layout_constraintLeft_toRightOf="@id/secGame"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivScore"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/score"
                android:scaleType="fitXY"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scores"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivScore" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/secUser"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:background="#998c88ff"
            android:padding="15dp"
            ads:layout_constraintRight_toLeftOf="@id/secAbout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secScore">

            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/rate_us"
                android:scaleType="fitXY"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserPanel"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_panel"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivUser" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/secAbout"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:background="#998c88ff"
            android:padding="15dp"
            ads:layout_constraintLeft_toRightOf="@id/secUser"
            ads:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secGame">

            <ImageView
                android:id="@+id/ivAbout"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/about"
                android:scaleType="fitXY"
                android:src="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAbout" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adsBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ads_banner_id"
        ads:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
